--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -15,13 +15,14 @@
  * Setup
  */
 @import "vars";
-@import "inuit.css/inuit";
+@import "/evanzio/responsive/css/inuit.css";
 
 
-
-
+ 
 
 /**
  * She’s all yours, cap’n... Begin importing your stuff here.
  */
 //@import "ui/example";
+
+@import "ui/page";
